--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js"></script>
 		<h1>Why I want to become a developer?</h1>
 		<p>Nothing excited me more than seeing the message "compiled successfully", so yes I am trying to be one.</p>
-</script>
+
 
 </body>
 
